@@ -1,3 +1,7 @@
+2021-06-12  Robby Stephenson  <robby@periapsis.org>
+
+	* Fixed bug that made audio file importing always be recursive.
+
 2021-05-27  Robby Stephenson  <robby@periapsis.org>
 
 	* Updated all templates to HTML5.
